welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: overloaded method value - with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
	if ( (nums(k+1) == (nums(k)+5)) && (   (nums(k+2) -  (nums(k) <=1) ) ))
                                                          ^